[gd_scene load_steps=14 format=1]

[ext_resource path="res://scripts/UI/in_game_menu.gd" type="Script" id=1]
[ext_resource path="res://scripts/UI/title_animation_changer.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/cartwheel_80.fnt" type="BitmapFont" id=3]
[ext_resource path="res://assets/fonts/cartwheel_40.fnt" type="BitmapFont" id=4]
[ext_resource path="res://assets/sprites/controls/debug/transparentLight/transparentLight31.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/controls/debug/transparentLight/transparentLight19.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/controls/debug/transparentLight/transparentLight14.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/controls/debug/transparentLight/transparentLight12.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]

resource/name = "open"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("menu_screen:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( -2.07053, -2.07053 ), "update":0, "values":[ Vector2( 29.0297, 21.5682 ), Vector2( 60, 10 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("menu_screen:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( -2.07053, -2.07053 ), "update":0, "values":[ 0.0, 0.0 ] }
tracks/2/type = "value"
tracks/2/path = NodePath("menu_screen:transform/scale")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( -2.07053, -2.07053 ), "update":0, "values":[ Vector2( 0.0618812, 0.120455 ), Vector2( 1, 1 ) ] }
tracks/3/type = "value"
tracks/3/path = NodePath("menu_screen/title/Label:visibility/self_opacity")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( -2.07053 ), "update":0, "values":[ 1.0 ] }
tracks/4/type = "value"
tracks/4/path = NodePath("menu_screen/title:transform/pos")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( -2.07053 ), "update":0, "values":[ Vector2( 452, 142 ) ] }
tracks/5/type = "value"
tracks/5/path = NodePath("menu_screen/title:transform/rot")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( -2.07053 ), "update":0, "values":[ 0.0 ] }
tracks/6/type = "value"
tracks/6/path = NodePath("menu_screen/title:transform/scale")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( -2.07053 ), "update":0, "values":[ Vector2( 1, 1 ) ] }
tracks/7/type = "value"
tracks/7/path = NodePath("menu_screen:visibility/opacity")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( -2.07053, -2.07053 ), "update":0, "values":[ 0.0, 1.0 ] }
tracks/8/type = "value"
tracks/8/path = NodePath("menu_screen:color")
tracks/8/interp = 1
tracks/8/imported = false
tracks/8/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( -2.07053, -2.07053 ), "update":0, "values":[ Color( 0.871216, 0.88494, 0.914063, 0.114745 ), Color( 0.376648, 0.558798, 0.945313, 1 ) ] }
tracks/9/type = "value"
tracks/9/path = NodePath("pause_button/pause_sprite:transform/pos")
tracks/9/interp = 1
tracks/9/imported = false
tracks/9/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( -2.07053, -2.07053 ), "update":0, "values":[ Vector2( 13.2, 12.8 ), Vector2( 51.2, 40 ) ] }
tracks/10/type = "value"
tracks/10/path = NodePath("pause_button/pause_sprite:transform/scale")
tracks/10/interp = 1
tracks/10/imported = false
tracks/10/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( -2.07053, -2.07053 ), "update":0, "values":[ Vector2( 0.4, 0.4 ), Vector2( 6.4, 3.33333 ) ] }
tracks/11/type = "value"
tracks/11/path = NodePath("pause_button/pause_sprite:visibility/opacity")
tracks/11/interp = 1
tracks/11/imported = false
tracks/11/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( 0.217638, 0.217638 ), "update":0, "values":[ 1.0, 0.0 ] }

[sub_resource type="Animation" id=2]

resource/name = "start"
length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("menu_screen:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ Vector2( 29.0297, 21.5682 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("menu_screen:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( -4 ), "update":0, "values":[ 0.0 ] }
tracks/2/type = "value"
tracks/2/path = NodePath("menu_screen:transform/scale")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( -4 ), "update":0, "values":[ Vector2( 0.0618812, 0.120455 ) ] }
tracks/3/type = "value"
tracks/3/path = NodePath("menu_screen/title/Label:visibility/self_opacity")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( -4 ), "update":0, "values":[ 1.0 ] }
tracks/4/type = "value"
tracks/4/path = NodePath("menu_screen/title:transform/pos")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ Vector2( 452, 142 ) ] }
tracks/5/type = "value"
tracks/5/path = NodePath("menu_screen/title:transform/rot")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( -4 ), "update":0, "values":[ 0.0 ] }
tracks/6/type = "value"
tracks/6/path = NodePath("menu_screen/title:transform/scale")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( -4 ), "update":0, "values":[ Vector2( 1, 1 ) ] }
tracks/7/type = "value"
tracks/7/path = NodePath("menu_screen:visibility/opacity")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( -4 ), "update":0, "values":[ 0.0 ] }
tracks/8/type = "value"
tracks/8/path = NodePath("menu_screen:color")
tracks/8/interp = 1
tracks/8/imported = false
tracks/8/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ Color( 0.871216, 0.88494, 0.914063, 0.114745 ) ] }
tracks/9/type = "value"
tracks/9/path = NodePath("pause_button:transform/scale")
tracks/9/interp = 1
tracks/9/imported = false
tracks/9/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ Vector2( 2.5, 2.5 ) ] }
tracks/10/type = "value"
tracks/10/path = NodePath("pause_button:transform/pos")
tracks/10/interp = 1
tracks/10/imported = false
tracks/10/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ Vector2( 5.96046e-008, 5.96046e-008 ) ] }
tracks/11/type = "value"
tracks/11/path = NodePath("pause_button:visibility/opacity")
tracks/11/interp = 1
tracks/11/imported = false
tracks/11/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 0.25 ), "update":0, "values":[ 1.0 ] }
tracks/12/type = "value"
tracks/12/path = NodePath("pause_button/pause_sprite:transform/pos")
tracks/12/interp = 1
tracks/12/imported = false
tracks/12/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ Vector2( 13.2, 12.8 ) ] }
tracks/13/type = "value"
tracks/13/path = NodePath("pause_button/pause_sprite:transform/scale")
tracks/13/interp = 1
tracks/13/imported = false
tracks/13/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ Vector2( 0.4, 0.4 ) ] }
tracks/14/type = "value"
tracks/14/path = NodePath("pause_button/pause_sprite:visibility/opacity")
tracks/14/interp = 1
tracks/14/imported = false
tracks/14/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ 1.0 ] }
tracks/15/type = "value"
tracks/15/path = NodePath("menu_screen:visibility/visible")
tracks/15/interp = 1
tracks/15/imported = false
tracks/15/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ true ] }

[sub_resource type="Animation" id=3]

length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("title/Label:visibility/self_opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1.5, 3 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ 1.0, 0.1, 1.0 ] }

[sub_resource type="Animation" id=4]

length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("title:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.4, 1.1, 1.5 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":0, "values":[ 0.0, 10.0, -10.0, 0.0 ] }

[sub_resource type="Animation" id=5]

length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("title:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.4, 1.1, 1.5 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":0, "values":[ Vector2( 452, 140 ), Vector2( 452, 149 ), Vector2( 452, 135 ), Vector2( 452, 142 ) ] }

[node name="menu_screen" type="CanvasLayer"]

process/pause_mode = 2
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="animation" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/open = SubResource( 1 )
anims/start = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "start"

[node name="menu_screen" type="Polygon2D" parent="."]

visibility/visible = false
transform/pos = Vector2( 60, 10 )
polygon = Vector2Array( 68, 90, 836, 90, 836, 490, 68, 490 )
uv = Vector2Array(  )
color = Color( 0.376648, 0.558798, 0.945313, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0
script/script = ExtResource( 2 )
__meta__ = { "_edit_group_":true }

[node name="animation" type="AnimationPlayer" parent="menu_screen"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/title_random_1 = SubResource( 3 )
anims/title_random_2 = SubResource( 4 )
anims/title_random_3 = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="title" type="Node2D" parent="menu_screen"]

transform/pos = Vector2( 452, 142 )

[node name="Label" type="Label" parent="menu_screen/title"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 416.0
margin/top = 82.0
margin/right = -353.0
margin/bottom = -17.0
custom_fonts/font = ExtResource( 3 )
text = "Pause"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="timer" type="Timer" parent="menu_screen/title"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = true

[node name="buttons" type="Container" parent="menu_screen"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 132.0
margin/top = 240.0
margin/right = 36.0
margin/bottom = 50.0

[node name="menu_button" type="Button" parent="menu_screen/buttons"]

focus_neighbour/right = NodePath("../restart_button")
focus_neighbour/bottom = NodePath("../restart_button")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -32.0
margin/top = -25.0
margin/right = 160.0
margin/bottom = 29.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.480469, 0.480469, 0.480469, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Menu"
icon = ExtResource( 5 )
flat = false

[node name="restart_button" type="Button" parent="menu_screen/buttons"]

focus_neighbour/left = NodePath("../menu_button")
focus_neighbour/top = NodePath("../menu_button")
focus_neighbour/right = NodePath("../resume_button")
focus_neighbour/bottom = NodePath("../resume_button")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 224.0
margin/top = 25.0
margin/right = 423.0
margin/bottom = 79.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.480469, 0.480469, 0.480469, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Restart"
icon = ExtResource( 6 )
flat = false

[node name="resume_button" type="Button" parent="menu_screen/buttons"]

focus_neighbour/left = NodePath("../restart_button")
focus_neighbour/top = NodePath("../restart_button")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 480.0
margin/top = -25.0
margin/right = 672.0
margin/bottom = 29.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.480469, 0.480469, 0.480469, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Resume"
icon = ExtResource( 7 )
flat = false

[node name="pause_button" type="TouchScreenButton" parent="."]

visibility/self_opacity = 0.0
transform/pos = Vector2( 5.96046e-008, 5.96046e-008 )
transform/scale = Vector2( 2.5, 2.5 )
normal = ExtResource( 8 )
pressed = null
bitmask = null
passby_press = false
action = ""
visibility_mode = 1

[node name="pause_sprite" type="Sprite" parent="pause_button"]

visibility/opacity = 0.0
transform/pos = Vector2( 51.2, 40 )
transform/scale = Vector2( 6.4, 3.33333 )
texture = ExtResource( 8 )
centered = false

[connection signal="finished" from="menu_screen/animation" to="menu_screen" method="_on_animation_finished"]

[connection signal="timeout" from="menu_screen/title/timer" to="menu_screen" method="_on_timer_timeout"]

[connection signal="pressed" from="menu_screen/buttons/menu_button" to="." method="_on_menu_button_pressed"]

[connection signal="pressed" from="menu_screen/buttons/restart_button" to="." method="_on_restart_button_pressed"]

[connection signal="pressed" from="menu_screen/buttons/resume_button" to="." method="_on_resume_button_pressed"]

[connection signal="released" from="pause_button" to="." method="_on_pause_button_released"]


